--- a/backend/.env
+++ b/backend/.env
@@ -5,3 +5,7 @@ DB_HOST=127.0.0.1:3306
 DB_NAME=proyek3db
 
 JWT_SECRET=7b2f7c52bcbdd76feba76039
+
+# Midtrans Configuration (Sandbox)
+MIDTRANS_SERVER_KEY=Mid-server-rAZ_W5rFpMNSSNlDGnUnMGlY
+MIDTRANS_CLIENT_KEY=Mid-client-95GoKLVYuRthH3VE
