--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,2 +1,2 @@
-VITE_API_URL=https://your-app.up.railway.app/api
-VITE_BACKEND_URL=https://your-app.up.railway.app
+VITE_API_URL=https://webbinar-production.up.railway.app/api
+VITE_BACKEND_URL=https://webbinar-production.up.railway.app
